--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/tailwind": "^5.0.2",
+    "@fontsource/pacifico": "^5.0.8",
+    "@fontsource/twinkle-star": "^5.0.17",
     "astro": "^3.6.3",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.3.2"
